# ci_iot

./: .gitignore  .gitmodules  readme.md  win_to_rpi
deploy/: deploy.py  deploy.sh
wiringpi/: CMakeLists.txt  conanfile.py
